Need to fix the width as I am not using my browser in a full screen so it looks stretched. Will do so before I am completed with the project. Almost finished with the card content however I have spent too much time on the css and need to put it aside for now

--- a/Day-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Day-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,18 @@
 /* All styles for your Card Components live here */
+
+.card-banner-container {
+	width: 100%;
+	border: 1px solid red;
+}
+
+.banner-img {
+	border-radius: 10px;
+	width: 100%;
+	max-height: 250px;
+}
+
+.card-container {
+	height: 500px;
+	width: 85%;
+	margin: 0 0 0 8%;
+}
