--- a/Day-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Day-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -2,12 +2,12 @@
 
 .lambda-paragraph {
 	color: #A6AFB8;
-	font-size: 1.2rem;
-	margin-left: 1%;
+	font-size: 1.3rem;
+	margin-left: 2%;
 }
 
 .lambda-heading {
-	font-size: 1.2rem;
+	font-size: 1.3rem;
 }
 
 .header-Container {
@@ -24,7 +24,7 @@
 }
 
 .header-content-container {
-	width: 65%;
+	width: 90%;
 }
 
 .header-content-span {
@@ -32,5 +32,5 @@
 }
 
 .imageThumbnail {
-	margin: 10px 1% 0 0;
+	margin: 15px 1% 0 0;
 }
